--- a/render.yaml
+++ b/render.yaml
@@ -4,8 +4,8 @@ services:
     name: chat-app-backend
     env: node
     plan: free
-    buildCommand: npm install
-    startCommand: npm run prod
+    buildCommand: cd BackEnd && npm install
+    startCommand: cd BackEnd && npm run prod
     autoDeploy: true
     envVars:
       - key: NODE_ENV
@@ -15,44 +15,26 @@ services:
       - key: JWT_SECRET
         generateValue: true
       - key: CORS_ORIGIN
-        value: https://chat-app-frontend.onrender.com
+        value: https://chat-app-frontend.vercel.app
+      # Variables para Turso
+      - key: TURSO_URL
+        sync: false # Tendrás que configurarlo manualmente en el panel de Render
+      - key: TURSO_AUTH_TOKEN
+        sync: false # Tendrás que configurarlo manualmente en el panel de Render
+      
+      # Variables de legado para MySQL (opcional - puedes eliminarlas)
       - key: DB_HOST
-        fromDatabase:
-          name: chat-app-db
-          property: host
+        value: "not-used"
       - key: DB_NAME
-        fromDatabase:
-          name: chat-app-db
-          property: database
+        value: "not-used"
       - key: DB_USER
-        fromDatabase:
-          name: chat-app-db
-          property: user
+        value: "not-used"
       - key: DB_PASSWORD
-        fromDatabase:
-          name: chat-app-db
-          property: password
+        value: "not-used"
       - key: DB_PORT
-        fromDatabase:
-          name: chat-app-db
-          property: port
+        value: "3306"
+  # No incluimos el Frontend service ya que usaremos Vercel
+  # Puedes eliminar esta sección si ya no usarás Render para el frontend
 
-  # Frontend service
-  - type: web
-    name: chat-app-frontend
-    env: node
-    plan: free
-    buildCommand: cd frontEnd && npm install && npm run build
-    startCommand: cd frontEnd && npm run preview -- --host 0.0.0.0 --port 3001
-    autoDeploy: true
-    envVars:
-      - key: VITE_API_URL
-        value: https://chat-app-backend.onrender.com/api
-      - key: VITE_SOCKET_URL
-        value: https://chat-app-backend.onrender.com
-
-# Database service
-databases:
-  - name: chat-app-db
-    plan: free
-    type: mysql
+# Database service via Turso (external)
+# No necesitamos definir la base de datos aquí ya que usamos Turso externamente
