--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,8 @@
   "outputDirectory": "frontEnd/dist",
   "framework": "vite",
   "routes": [
+    { "src": "/assets/(.*)", "dest": "/assets/$1" },
+    { "src": "/(.*\\.(js|css|ico|png|jpg|jpeg|svg|webp|json))", "dest": "/$1" },
     { "src": "/(.*)", "dest": "/index.html" }
   ],
   "env": {
