--- a/frontEnd/.env.production
+++ b/frontEnd/.env.production
@@ -1,3 +1,3 @@
 # Frontend Production Environment Variables
-VITE_API_URL=https://chat-app-backend.onrender.com/api
-VITE_SOCKET_URL=https://chat-app-backend.onrender.com
+VITE_API_URL=https://chat-for-company.onrender.com/api
+VITE_SOCKET_URL=https://chat-for-company.onrender.com
