--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -8,6 +8,7 @@
     "jsonwebtoken": "9.0.2",
     "mysql2": "3.14.0",
     "socket.io": "4.8.1",
+    "sqlite3": "^5.1.7",
     "uuid": "11.1.0",
     "zod": "3.24.3"
   },
