--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -9,7 +9,7 @@
     "mysql2": "3.14.0",
     "socket.io": "4.8.1",
     "sqlite3": "^5.1.7",
-    "uuid": "11.1.0",
+    "uuid": "^11.1.0",
     "zod": "3.24.3"
   },
   "name": "chat_dev",
