--- a/frontEnd/package.json
+++ b/frontEnd/package.json
@@ -13,10 +13,14 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.5",
+    "highlight.js": "^11.11.1",
     "lucide-react": "^0.507.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "7.5.3",
+    "rehype-highlight": "^7.0.2",
+    "remark-gfm": "^4.0.1",
     "socket.io-client": "^4.8.1",
     "tailwindcss": "^4.1.5",
     "tailwindcss-animate": "1.0.7"
