--- a/frontEnd/package.json
+++ b/frontEnd/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.5",
+    "canvas-confetti": "^1.9.3",
     "highlight.js": "^11.11.1",
     "lucide-react": "^0.507.0",
     "react": "^19.1.0",
