feat: Implement secure support chat with AI assistant
- Add SupportChat model and controller with security validations
- Implement AIService with secure database queries and restricted tools
- Add SupportChat component with modern UI design
- Integrate floating support chat button in ChatContainer
- Add validation middleware for support chat messages
- Configure secure system prompt with safety restrictions
- Remove hardcoded API keys for security compliance
- Add demo mode when API key is not available

--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.54.0",
     "@libsql/client": "^0.15.7",
     "bcrypt": "5.1.1",
     "cors": "2.8.5",
