--- a/BackEnd/.env.example
+++ b/BackEnd/.env.example
@@ -19,6 +19,6 @@ JWT_SECRET=2b7e1e7e-8c2a-4e2d-9f3a-7c1e2b8d4f5a
 # CORS Configuration
 CORS_ORIGIN=http://localhost:5173
 
-# Configuración de Anthropic para chat de apoyo con IA
-# Obtén tu API key en: https://console.anthropic.com/
-ANTHROPIC_API_KEY=your_anthropic_api_key_here
+# Configuración de DeepSeek para chat de apoyo con IA
+# Obtén tu API key en: https://platform.deepseek.com/
+DEEPSEEK_API_KEY=your_deepseek_api_key_here
