--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -1,7 +1,7 @@
 {
   "dependencies": {
-    "@anthropic-ai/sdk": "^0.54.0",
     "@libsql/client": "^0.15.7",
+    "axios": "^1.10.0",
     "bcrypt": "5.1.1",
     "cors": "2.8.5",
     "dotenv": "16.5.0",
