--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -12,6 +12,7 @@
     "multer": "^2.0.1",
     "mysql2": "3.14.0",
     "node-fetch": "^3.3.2",
+    "resend": "^4.6.0",
     "socket.io": "4.8.1",
     "sqlite3": "^5.1.7",
     "uuid": "^11.1.0",
