feat: add email configuration for Resend service and update email sender logic

--- a/BackEnd/.env.example
+++ b/BackEnd/.env.example
@@ -22,3 +22,12 @@ CORS_ORIGIN=http://localhost:5173
 # Configuración de DeepSeek para chat de apoyo con IA
 # Obtén tu API key en: https://platform.deepseek.com/
 DEEPSEEK_API_KEY=your_deepseek_api_key_here
+
+# Email configuration (Resend)
+# Obtén tu API key en: https://resend.com/api-keys
+RESEND_API_KEY=re_YourApiKey_Here
+# IMPORTANTE: Configura el email "from" según tu configuración en Resend:
+# - Sin dominio propio: usa tu email verificado en Resend (ej: tu-email@gmail.com)
+# - Con dominio propio: usa tu dominio verificado (ej: noreply@tu-dominio.com)
+# - Para desarrollo local: usa onboarding@resend.dev (sandbox)
+RESEND_FROM_EMAIL=onboarding@resend.dev
