--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -3,6 +3,7 @@
     "@libsql/client": "^0.15.7",
     "axios": "^1.10.0",
     "bcrypt": "5.1.1",
+    "chrono-node": "^2.9.0",
     "cors": "2.8.5",
     "dotenv": "16.5.0",
     "express": "5.1.0",
