fix: correct API URL in production environment variables

--- a/frontEnd/.env.production
+++ b/frontEnd/.env.production
@@ -1,3 +1,3 @@
 # Frontend Production Environment Variables
-VITE_API_URL=https://thinkchat.onrender.com//api
+VITE_API_URL=https://thinkchat.onrender.com/api
 VITE_SOCKET_URL=https://thinkchat.onrender.com
